# msc-studies

./: .gitignore  README.md  Subjects.md
big_data_analysis/assignment1/: README.md  main.py  main_sequential.py  pyproject.toml
big_data_analysis/assignment2/: Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
big_data_analysis/assignment2/python/: app.py  data_loader.py  sentiment_analysis.py
big_data_analysis/assignment3/: Makefile  README.md  assignment.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
big_data_analysis/assignment3/python/: calculate_delta_histogram.py  calculate_statistics.py  config.py  filter_noise.py  ingest.py
big_data_analysis/assignment4/: Makefile  README.md  assignment.md  config.yml  pyproject.toml  requirements.txt
big_data_analysis/assignment4/python/: main.py  utils.py
big_data_analysis/assignment5/: Makefile  README.md  assignment.md  config.yml  pyproject.toml  requirements.txt
big_data_analysis/assignment5/python/: config.py  data_loader.py  main.py  topic_modeling_trends.py  visualization.py
big_data_analysis/assignment6/: README.md  assignment.md  config.yml  pyproject.toml  requirements.txt
big_data_analysis/assignment6/data/output/: detected_ports_map.html
big_data_analysis/assignment6/python/: data_loader.py  data_loader_and_schema.py  filtering_operations.py  main.py  port_detection.py  port_detection_logic.py  port_sizing_logic.py  spark_session_manager.py  utils.py  visualize_ports.py
data_mining/: paper_review.tex
deep_learning/assignment1/: README.md  pyproject.toml
deep_learning/assignment1/notebooks/: download_dataset.ipynb  image_segmentation.ipynb  images_to_download.csv
deep_learning/assignment1/python/: dataloaders.py  image_util.py  model.py  task.py
deep_learning/assignment2/: README.md  pyproject.toml
deep_learning/assignment2/notebooks/: download_content.ipynb  index_documents.ipynb  rag_development.ipynb  rag_pipeline.ipynb
functional_data_analysis/notebooks/: bibasis_functions.R  eda.Rmd  eda_fourier.Rmd  eda_old.Rmd  eda_v2.Rmd  project.Rmd  project.html
functional_data_analysis/presentation_1/: main.tex
functional_data_analysis/presentation_2/: main.tex
functional_data_analysis/presentation_3/: main.tex
image_analysis/assignment1/: Project.ipynb  pyproject.toml
image_analysis/assignment1/python/: image_classes.py  image_utils.py  main.py  notebook_utils.py
image_analysis/assignment2/: pyproject.toml  report.ipynb  report.tex
image_analysis/assignment2/python/: filters.py  image_pipelines.py  image_utils.py  main.py  notebook_utils.py
image_analysis/assignment3/: pyproject.toml  report.ipynb  report.tex
image_analysis/assignment3/data/input/: Bottles.tif
image_analysis/assignment3/python/: image_pipelines.py  image_utils.py  main.py
microeconomic_analysis/: LLM_market_research.html  LLM_market_research.ipynb  pyproject.toml
multivariate_statistics/: multivariate_t3.ipynb  multivariate_t4.ipynb  multivariate_t5.Rmd  multivariate_t5.ipynb  multivariate_t6.ipynb  multivariate_t7.ipynb  pyproject.toml  sem_model
multivariate_statistics/data/: ABk.sav  Activity.sav  Beer.sav  CZILSWE.sav  LI.sav  MIU3.sav  Maganc.sav  RM.sav  hsbdataset.sav  partners.sav  scmath.sav
multivariate_time_series/analysis/: eda.Rmd  eda.html
multivariate_time_series/presentation/: main.tex
multivariate_time_series/project/analysis/: eda.Rmd
multivariate_time_series/project/report/: course_work.tex
nlp/assignment1/: audio_utils.py  dataset_utils.py  model.py  pyproject.toml  report.ipynb
nlp/assignment2/: main.py  pyproject.toml  report.tex
nlp/assignment3/: main.py  pyproject.toml  report.tex
nlp/assignment4/: main.py  pyproject.toml  report.tex
nlp/assignment4/data/input/: austen.txt
nlp/assignment4/data/output/: char_maps.pkl  model.pth
pnp_statistics/: project.R  project.tex  task.md
