[tool.poetry]
name = "microeconomic-analysis"
version = "0.1.0"
description = ""
authors = ["Aleksandr J. Smoliakov <aleksandr.smoliakov@mif.stud.vu.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
langchain = "^0.3.11"
poetry = "^1.8.5"
langchain-community = "^0.3.11"
pandas = "^2.2.3"
langchain-openai = "^0.2.13"
matplotlib = "^3.10.0"
tabulate = "^0.9.0"
statsmodels = "^0.14.4"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
