[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Aleksandr J. Smoliakov <aleksandr.smoliakov@mif.stud.vu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.2.3"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
