[tool.poetry]
name = "assignment6"
version = "0.1.0"
description = ""
authors = ["Aleksandr J. Smoliakov <aleksandr.smoliakov@mif.stud.vu.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pyspark = "^3.5.5"
pyyaml = "^6.0.2"
folium = "^0.19.6"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
