[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Aleksandr J. Smoliakov <aleksandr.smoliakov@mif.stud.vu.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.19.1+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
pandas = "^2.2.3"
matplotlib = "^3.9.2"
soundfile = "^0.12.1"
scikit-learn = "^1.5.2"
numpy = "==2.0.*"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ipykernel = "^6.29.5"
nbconvert = "^7.16.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
